src/ForgeMission.Parser/Generated/MclGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MclGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ForgeMission.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MclGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LET=1, MISSION=2, LOOP=3, USING=4, WHEN=5, ELSE=6, PARALLEL=7, ENV=8, 
		OUTPUT=9, INT=10, ARROW=11, FAT_ARROW=12, EQUALS=13, COLON=14, LPAREN=15, 
		RPAREN=16, LBRACE=17, RBRACE=18, COMMA=19, UPPER_ID=20, LOWER_ID=21, STRING=22, 
		WS=23, LINE_COMMENT=24;
	public const int
		RULE_program = 0, RULE_letBinding = 1, RULE_declaration = 2, RULE_outputDecl = 3, 
		RULE_mission = 4, RULE_loopClause = 5, RULE_params = 6, RULE_pipeline = 7, 
		RULE_pipelineElement = 8, RULE_step = 9, RULE_contextClause = 10, RULE_usingClause = 11, 
		RULE_whenClause = 12, RULE_whenExpr = 13, RULE_parallelBlock = 14, RULE_binding = 15, 
		RULE_anyKey = 16, RULE_value = 17, RULE_envCall = 18;
	public static readonly string[] ruleNames = {
		"program", "letBinding", "declaration", "outputDecl", "mission", "loopClause", 
		"params", "pipeline", "pipelineElement", "step", "contextClause", "usingClause", 
		"whenClause", "whenExpr", "parallelBlock", "binding", "anyKey", "value", 
		"envCall"
	};

	private static readonly string[] _LiteralNames = {
		null, "'let'", "'mission'", "'loop'", "'using'", "'when'", "'else'", "'parallel'", 
		"'env'", "'output'", null, "'->'", "'=>'", "'='", "':'", "'('", "')'", 
		"'{'", "'}'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LET", "MISSION", "LOOP", "USING", "WHEN", "ELSE", "PARALLEL", "ENV", 
		"OUTPUT", "INT", "ARROW", "FAT_ARROW", "EQUALS", "COLON", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "COMMA", "UPPER_ID", "LOWER_ID", "STRING", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MclGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MclGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MclGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MclGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MclGrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext[] letBinding() {
			return GetRuleContexts<LetBindingContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext letBinding(int i) {
			return GetRuleContext<LetBindingContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputDeclContext[] outputDecl() {
			return GetRuleContexts<OutputDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputDeclContext outputDecl(int i) {
			return GetRuleContext<OutputDeclContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 518L) != 0)) {
				{
				State = 41;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LET:
					{
					State = 38;
					letBinding();
					}
					break;
				case MISSION:
					{
					State = 39;
					declaration();
					}
					break;
				case OUTPUT:
					{
					State = 40;
					outputDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 46;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetBindingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LET() { return GetToken(MclGrammarParser.LET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOWER_ID() { return GetToken(MclGrammarParser.LOWER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(MclGrammarParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public LetBindingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letBinding; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetBinding(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetBindingContext letBinding() {
		LetBindingContext _localctx = new LetBindingContext(Context, State);
		EnterRule(_localctx, 2, RULE_letBinding);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			Match(LET);
			State = 49;
			Match(LOWER_ID);
			State = 50;
			Match(EQUALS);
			State = 51;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MissionContext mission() {
			return GetRuleContext<MissionContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			mission();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutputDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUTPUT() { return GetToken(MclGrammarParser.OUTPUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MclGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(MclGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MclGrammarParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(MclGrammarParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MclGrammarParser.STRING, 0); }
		public OutputDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_outputDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterOutputDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitOutputDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutputDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OutputDeclContext outputDecl() {
		OutputDeclContext _localctx = new OutputDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_outputDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(OUTPUT);
			State = 56;
			Match(LPAREN);
			State = 57;
			Match(UPPER_ID);
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 58;
				Match(COMMA);
				State = 59;
				Match(STRING);
				}
			}

			State = 62;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MissionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MISSION() { return GetToken(MclGrammarParser.MISSION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(MclGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(MclGrammarParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(MclGrammarParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(MclGrammarParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopClauseContext loopClause() {
			return GetRuleContext<LoopClauseContext>(0);
		}
		public MissionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mission; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterMission(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitMission(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMission(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MissionContext mission() {
		MissionContext _localctx = new MissionContext(Context, State);
		EnterRule(_localctx, 8, RULE_mission);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(MISSION);
			State = 65;
			Match(UPPER_ID);
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 66;
				@params();
				}
			}

			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LOOP) {
				{
				State = 69;
				loopClause();
				}
			}

			State = 72;
			Match(EQUALS);
			State = 73;
			Match(LBRACE);
			State = 74;
			pipeline();
			State = 75;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOOP() { return GetToken(MclGrammarParser.LOOP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MclGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(MclGrammarParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MclGrammarParser.RPAREN, 0); }
		public LoopClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loopClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterLoopClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitLoopClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopClauseContext loopClause() {
		LoopClauseContext _localctx = new LoopClauseContext(Context, State);
		EnterRule(_localctx, 10, RULE_loopClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			Match(LOOP);
			State = 78;
			Match(LPAREN);
			State = 79;
			Match(INT);
			State = 80;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(MclGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LOWER_ID() { return GetTokens(MclGrammarParser.LOWER_ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOWER_ID(int i) {
			return GetToken(MclGrammarParser.LOWER_ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(MclGrammarParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(MclGrammarParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(MclGrammarParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_params; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterParams(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitParams(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParams(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamsContext @params() {
		ParamsContext _localctx = new ParamsContext(Context, State);
		EnterRule(_localctx, 12, RULE_params);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(LPAREN);
			State = 83;
			Match(LOWER_ID);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 84;
				Match(COMMA);
				State = 85;
				Match(LOWER_ID);
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 91;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PipelineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PipelineElementContext[] pipelineElement() {
			return GetRuleContexts<PipelineElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineElementContext pipelineElement(int i) {
			return GetRuleContext<PipelineElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ARROW() { return GetTokens(MclGrammarParser.ARROW); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARROW(int i) {
			return GetToken(MclGrammarParser.ARROW, i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pipeline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPipeline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PipelineContext pipeline() {
		PipelineContext _localctx = new PipelineContext(Context, State);
		EnterRule(_localctx, 14, RULE_pipeline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			pipelineElement();
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ARROW) {
				{
				{
				State = 94;
				Match(ARROW);
				State = 95;
				pipelineElement();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PipelineElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StepContext step() {
			return GetRuleContext<StepContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParallelBlockContext parallelBlock() {
			return GetRuleContext<ParallelBlockContext>(0);
		}
		public PipelineElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pipelineElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterPipelineElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitPipelineElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPipelineElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PipelineElementContext pipelineElement() {
		PipelineElementContext _localctx = new PipelineElementContext(Context, State);
		EnterRule(_localctx, 16, RULE_pipelineElement);
		try {
			State = 103;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case UPPER_ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 101;
				step();
				}
				break;
			case PARALLEL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102;
				parallelBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StepContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(MclGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ContextClauseContext contextClause() {
			return GetRuleContext<ContextClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingClauseContext usingClause() {
			return GetRuleContext<UsingClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhenClauseContext whenClause() {
			return GetRuleContext<WhenClauseContext>(0);
		}
		public StepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_step; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.EnterStep(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMclGrammarListener typedListener = listener as IMclGrammarListener;
			if (typedListener != null) typedListener.ExitStep(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMclGrammarVisitor<TResult> typedVisitor = visitor as IMclGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStep(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepContext step() {
		StepContext _localctx = new StepContext(Context, State);
		EnterRule(_localctx, 18, RULE_step);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(UPPER_ID);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 106;
				contextClause();
				}
			}

			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==USING) {
				{
				State = 109;
				usingClause();
				}
			}

			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHEN) {
				{
				State = 112;
				whenClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
